--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
    <meta charset="utf-8">
-   <title>Wedding planner</title>
+   <title>Maharaja Lawns – Wedding planner</title>
    <meta name="description" content="">
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -81,16 +81,16 @@
             <ul>
                <li>
                   <i class="fa-light fa-location-dot"></i>
-                  <a href="htrrs://www.google.com/maps/@23.8223586,90.3661283,15z" target="_blank">Melbone st,
-                     Australia, Ny 12099</a>
+                  <a href="htrrs://www.google.com/maps/@23.8223586,90.3661283,15z" target="_blank">Ahilyanagar,
+                     Maharashtra, India</a>
                </li>
                <li>
                   <i class="fas fa-envelope"></i>
-                  <a href="mailto:rubelmah55@gmail.com">rubelmah55@gmail.com</a>
+                  <a href="mailto:hrpune@digheglobal.org">hrpune@digheglobal.org</a>
                </li>
                <li>
                   <i class="fal fa-phone-alt"></i>
-                  <a href="tel:48555223224">+48 555 223 224</a>
+                  <a href="tel:+917507265266">+917507265266</a>
                </li>
             </ul>
          </div>
@@ -99,13 +99,13 @@
                <a href="#"><i class="fab fa-twitter"></i></a>
                <a href="#"><i class="fab fa-instagram"></i></a>
                <a href="#"><i class="fab fa-facebook-f"></i></a>
-               <a href="#"><i class="fab fa-pinterest-p"></i></a>
+               <a href="#"><i class="fab fa-linkedin-in"></i></a>
             </div>
          </div>
       </div>
    </div>
    <div class="body-overlay"></div>
-   <!-- rr-offcanvus-area-end -->
+   <!-- rr-offcanvus-area-end -->>
 
    <!-- header area start -->
    <header class="rr-header-main z-index-3">
@@ -561,9 +561,9 @@
                            </div>
                            <div class="rr-footer-2-widget-content-info">
                               <ul>
-                                 <li><a href="tel:+919209853241"><span><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                 <li><a href="tel:+917507265266"><span><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M9.67161 3.67583C10.3263 3.80331 10.9279 4.12286 11.3995 4.59359C11.8712 5.06432 12.1913 5.66481 12.319 6.3182M9.67161 1C11.0317 1.15081 12.3 1.75871 13.2683 2.72391C14.2365 3.6891 14.8472 4.95421 15 6.31151M14.3298 11.6498V13.6567C14.3305 13.843 14.2923 14.0274 14.2175 14.1981C14.1427 14.3688 14.033 14.522 13.8955 14.648C13.758 14.7739 13.5956 14.8698 13.4187 14.9295C13.2419 14.9892 13.0546 15.0113 12.8686 14.9946C10.8062 14.7709 8.8251 14.0675 7.08449 12.9409C5.46509 11.9138 4.09211 10.5434 3.06307 8.92713C1.93035 7.18196 1.22544 5.19502 1.00544 3.12728C0.988691 2.94229 1.01072 2.75585 1.07012 2.57982C1.12952 2.4038 1.22499 2.24204 1.35046 2.10486C1.47592 1.96768 1.62863 1.85808 1.79886 1.78303C1.96909 1.70798 2.15312 1.66913 2.33921 1.66896H4.34993C4.6752 1.66576 4.99053 1.78072 5.23716 1.99242C5.48379 2.20411 5.64488 2.49809 5.6904 2.81956C5.77527 3.4618 5.93266 4.0924 6.15957 4.69933C6.24974 4.93876 6.26926 5.19898 6.2158 5.44915C6.16235 5.69932 6.03816 5.92895 5.85796 6.11083L5.00676 6.9604C5.96088 8.63517 7.35021 10.0218 9.02818 10.9741L9.87939 10.1246C10.0616 9.94471 10.2917 9.82076 10.5423 9.76741C10.793 9.71405 11.0537 9.73353 11.2936 9.82354C11.9017 10.05 12.5335 10.2071 13.177 10.2918C13.5025 10.3376 13.7999 10.5013 14.0124 10.7517C14.225 11.0021 14.3379 11.3217 14.3298 11.6498Z" stroke="#051145" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                    </svg></span>+919209853241</a></li>
+                                    </svg></span>+917507265266</a></li>
                                  <li><a href="mailto:weddingplanner@gmail.com"><span><svg width="16" height="13" viewBox="0 0 16 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M2.4 1H13.6C14.37 1 15 1.63 15 2.4V10.8C15 11.57 14.37 12.2 13.6 12.2H2.4C1.63 12.2 1 11.57 1 10.8V2.4C1 1.63 1.63 1 2.4 1Z" stroke="#051145" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                     <path d="M15 2.3999L8 7.2999L1 2.3999" stroke="#051145" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
